--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
         <div class="max-w-6xl mx-auto glass rounded-full px-8 py-3 flex items-center justify-between shadow-2xl">
             <span class="font-logo text-vividPink text-xl tracking-tighter">VANILLA</span>
             
-            <div class="hidden md:flex space-x-10 text-[10px] font-black tracking-[0.2em]">
-                <a href="#inicio" class="nav-link hover:text-vividPink transition-all duration-300">INICIO</a>
-                <a href="#explorar" class="nav-link hover:text-vividPink transition-all duration-300">EXPLORAR</a>
-                <a href="#descargas" class="nav-link hover:text-vividPink transition-all duration-300">DESCARGAS</a>
-            </div>
+<div class="flex space-x-6 md:space-x-10 text-[10px] font-black tracking-[0.2em]">
+    <a href="#inicio" class="nav-link hover:text-vividPink transition-all duration-300">INICIO</a>
+    <a href="#explorar" class="nav-link hover:text-vividPink transition-all duration-300">EXPLORAR</a>
+    <a href="#descargas" class="nav-link hover:text-vividPink transition-all duration-300">DESCARGAS</a>
+</div>
 
             <div class="flex items-center space-x-6">
                 <button @click="darkMode = !darkMode" class="hover:scale-125 transition-transform">
@@ -298,3 +298,4 @@
     </script>
 </body>
 </html>
+
